Use requires_attention filter instead of requires_moderator_response

--- a/app/views/layouts/_discussions.html.erb
+++ b/app/views/layouts/_discussions.html.erb
@@ -23,8 +23,8 @@
 
       <% if current_user&.moderator_here? %>
         <div class="discussion-requires-attention float-end">
-          <%= label_tag :requires_moderator_response, t(:requires_attention) %>
-          <%= check_box_tag :requires_moderator_response, true, discussion_filter_params[:requires_moderator_response], class: 'form-check-input', onclick: 'mumuki.Forum.discussionsToggleCheckbox($(this))' %>
+          <%= label_tag :requires_attention, t(:requires_attention) %>
+          <%= check_box_tag :requires_attention, true, discussion_filter_params[:requires_attention], class: 'form-check-input', onclick: 'mumuki.Forum.discussionsToggleCheckbox($(this))' %>
         </div>
       <% end %>
 
