--- a/app/views/user_mailer/certificate.html.erb
+++ b/app/views/user_mailer/certificate.html.erb
@@ -76,20 +76,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" class="muMailCaptionRightContentOuter" width="100%">
                           <tbody><tr>
                             <td valign="top" class="muMailCaptionRightContentInner" style="padding:0 9px ;">
-                              <table align="left" border="0" cellpadding="0" cellspacing="0" class="muMailCaptionRightImageContentContainer" width="264">
-                                <tbody><tr>
-                                  <td class="muMailCaptionRightImageContent" align="center" valign="top">
-
-
-
-                                    <img alt="" src="https://gallery.mailchimp.com/046b6c670d9f80ebd6c5d075b/images/225fe60f-780a-451e-90aa-afb01f88a1b4.png" width="159" style="max-width:159px;" class="muMailImage">
-
-
-
-                                  </td>
-                                </tr>
-                                </tbody></table>
-                              <table class="muMailCaptionRightTextContentContainer" align="right" border="0" cellpadding="0" cellspacing="0" width="264">
+                              <table class="muMailCaptionRightTextContentContainer" align="center" border="0" cellpadding="0" cellspacing="0" width="264">
                                 <tbody><tr>
                                   <td valign="top" class="muMailTextContent">
                                     <h3 class="null" style="text-align: center;"><br>
