Added button go to profile

--- a/app/views/user_mailer/certificate.html.erb
+++ b/app/views/user_mailer/certificate.html.erb
@@ -102,6 +102,15 @@
                     <tbody class="muMailButtonBlockOuter">
                     <tr>
                       <td style="padding-top:0; padding-right:18px; padding-bottom:18px; padding-left:18px;" valign="top" align="center" class="muMailButtonBlockInner">
+                        <table border="0" cellpadding="0" cellspacing="0" class="muMailButtonContentContainer" style="border-collapse: separate !important;border-radius: 3px;background-color: #FF5B81;">
+                          <tbody>
+                          <tr>
+                            <td align="center" valign="middle" class="muMailButtonContent" style="font-family: Helvetica; font-size: 18px; padding: 18px;">
+                              <a class="muMailButton " title=<%= t :my_profile %> href=<%= @organization.url_for('/user') %> target="_self" style="font-weight: bold;letter-spacing: -0.5px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;"><%= t :my_profile %></a>
+                            </td>
+                          </tr>
+                          </tbody>
+                        </table>
                       </td>
                     </tr>
                     </tbody>
