Prefer Time.current to DateTime.now

--- a/app/views/user_mailer/certificate.text.erb
+++ b/app/views/user_mailer/certificate.text.erb
@@ -4,7 +4,7 @@
 <%= t :new_certificate_mailer_p2 %>
 
 
-© Copyright 2015-<%= DateTime.now.year %> Mumuki.
+© Copyright 2015-<%= Time.current.year %> Mumuki.
 
 <%= t :stop_emails? %>
 <%= t :cancel_subscription %>
