--- a/app/views/layouts/_copyright.html.erb
+++ b/app/views/layouts/_copyright.html.erb
@@ -1,2 +1,2 @@
-&copy; 2015-<%= DateTime.now.year %>
+&copy; 2015-<%= Time.current.year %>
 <a href="http://mumuki.org/" class="mu-org-link"><span class="da da-mumuki-circle"></span> Mumuki</a>
