--- a/app/views/certificates/verify.html.erb
+++ b/app/views/certificates/verify.html.erb
@@ -7,7 +7,7 @@
 <div class="container">
   <div class="row mu-certificate-data">
     <div class="col-md-6">
-      <div class="row text-center jumbotron">
+      <div class="row text-center jumbotron mb-4">
         <div class="col-md-12">
           <h3 class="mu-certificate-name">
             <%= t :completed_by %>
@@ -18,12 +18,12 @@
         </div>
       </div>
       <% if @certificate.for_user? current_user %>
-        <div class="row mu-certificate-buttons">
-          <a href="<%= linkedin_post_url @certificate %>" target="_blank">
-            <img src="https://download.linkedin.com/desktop/add2profile/buttons/<%= t :linkedin_profile_button_locale %>.png" alt="LinkedIn Add to Profile button">
-          </a>
-          <a class="btn btn-complementary mu-certificate-download-btn pull-end" href="<%= download_certificate_path @certificate.code %>" target="_blank">
+        <div class="mu-certificate-buttons d-flex justify-content-evenly">
+          <a class="btn btn-complementary mu-certificate-download-btn mx-2" href="<%= download_certificate_path @certificate.code %>" target="_blank">
             <%= fa_icon(:download, class: 'fa-fw fa-lg mu-certificate-download-btn-icon', text: t(:certificate)) %>
+          </a>
+          <a href="<%= linkedin_post_url @certificate %>" class="mx-2" target="_blank">
+            <img src="https://download.linkedin.com/desktop/add2profile/buttons/<%= t :linkedin_profile_button_locale %>.png" alt="LinkedIn Add to Profile button">
           </a>
         </div>
       <% end %>
