Replace outdated jumbotron with current Bootstrap classes

--- a/app/views/certificates/verify.html.erb
+++ b/app/views/certificates/verify.html.erb
@@ -7,7 +7,7 @@
 <div class="container">
   <div class="row mu-certificate-data">
     <div class="col-md-6">
-      <div class="row text-center jumbotron mb-4">
+      <div class="row text-center bg-light p-4 rounded-3 mb-4">
         <div class="col-md-12">
           <h3 class="mu-certificate-name">
             <%= t :completed_by %>
