Revert "Temporarily remove notifications"
This reverts commit b597223bdd11030a21fb870151cee4c9974ed4dd.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
                 <span class="mu-level-number"></span>
               </div>
             <% end %>
-            <%#= render partial: 'notifications/dropdown' %>
+            <%= render partial: 'notifications/dropdown' %>
             <div class="dropdown mu-navbar-element">
               <div id="profileDropdown" class="profile-dropdown dropdown-toggle" data-bs-toggle="dropdown" aria-label="<%= t(:user) %>" role="menu" tabindex="0">
                 <%= profile_picture_for current_user %>
