--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -8,7 +8,7 @@
         </a>
       </li>
       <% messages.each do |message| %>
-          <li class="<%= sender_class(message) %>">
+          <li class="<%= sender_class(message) %> <%= staleness_class(message) %>">
             <div class="message">
               <p> <%= message.content_html %></p>
               <div class="sender"><%= message.sender unless message.sender == current_user_uid %></div>
