Only show verified name notice if organization is private
This is to avoid an incorrect notice showing on a public
organization, as verified names are always provided by a
private organization but the profile info is shared with
all of them, regardless of visibility.

--- a/app/views/users/_basic_profile_fields.html.erb
+++ b/app/views/users/_basic_profile_fields.html.erb
@@ -19,7 +19,7 @@
   <div><%= form.text_field :email, readonly: true, class: 'form-control' %></div>
 </fieldset>
 
-<% if @user.has_verified_full_name? %>
+<% if show_verified_full_name_notice?(@user, Organization.current) %>
   <label><%= (t :verified_full_name) %></label>
   <input class="form-control" readonly="readonly" value="<%= @user.verified_full_name %>">
   <p class="fs-7">
