Avoid classroom fetch since all messages are here

--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -3,7 +3,7 @@
     <ol class="mu-chat">
       <li>
         <a href="javascript:{}"
-           onclick="mumuki.Chat.submitMessagesForm('<%= messages_url(@exercise) %>', '<%= read_messages_path(@exercise) %>', '<%= messages_errors_path %>')">
+           onclick="mumuki.Chat.submitMessagesForm('<%= read_messages_path(@exercise) %>', '<%= messages_errors_path %>')">
           <%= t :more_messages %>
         </a>
       </li>
