Use full path to render profile fields partial
While it works on the normal user flow, the shortened path fails
if the user has an invitation. On the invitation form view,
users/profile_fields is rendered. If users/ is not specified on
basic_profile_fields, it'd consequently try to find the view on
invitations/basic_profile_fields.

--- a/app/views/users/_profile_fields.html.erb
+++ b/app/views/users/_profile_fields.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'basic_profile_fields', locals: {form: form} %>
+<%= render partial: 'users/basic_profile_fields', locals: {form: form} %>
