Show discussion creator and date on discussions index

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
@@ -111,6 +111,12 @@ $moderator-badge-color: #dd9900;
     display: block;
     text-overflow: ellipsis;
     white-space: nowrap;
+    margin-bottom: 20px;
+  }
+  .discussion-initiator {
+    img {
+      margin-top: -2px;
+    }
   }
 }
 
