--- a/app/views/layouts/_discussions_list.html.erb
+++ b/app/views/layouts/_discussions_list.html.erb
@@ -3,13 +3,7 @@
     <%= link_to exercise_discussion_path(discussion.exercise.id, discussion) do %>
       <div class="discussion">
         <div class="discussion-row">
-          <%= discussion_messages_icon(discussion) %>
-          <% unless @debatable.respond_to? :language %>
-            <div class="discussion-language-icon">
-              <%= language_icon(discussion.exercise.language) %>
-            </div>
-          <% end %>
-          <div>
+          <div class="d-flex">
             <div class="discussion-title">
               <span class="discussion-status-icon">
                 <%= discussion_status_fa_icon(discussion) %>
@@ -21,17 +15,24 @@
                   <%= responsible_moderator_text_for(discussion, current_user)%>
                 </span>
               <% end %>
-
             </div>
-            <span class="discussion-description">
-              <%= discussion.description %>
-            </span>
-            <span class="discussion-initiator">
-              <%= profile_picture_for(discussion.initiator, height: 20) %>
-              <strong><%= discussion_user_name discussion.initiator %></strong>
-              <%= t(:asked_time_since, time: time_ago_in_words(discussion.created_at)) %>
-            </span>
+            <div class="discussion-title-icons">
+              <%= discussion_messages_icon(discussion) %>
+              <% unless @debatable.respond_to? :language %>
+                <div class="discussion-language-icon">
+                  <%= language_icon(discussion.exercise.language) %>
+                </div>
+              <% end %>
+            </div>
           </div>
+          <span class="discussion-description">
+            <%= discussion.description %>
+          </span>
+          <span class="discussion-initiator">
+            <%= profile_picture_for(discussion.initiator, height: 20) %>
+            <strong><%= discussion_user_name discussion.initiator %></strong>
+            <%= t(:asked_time_since, time: time_ago_in_words(discussion.created_at)) %>
+          </span>
         </div>
       </div>
     <% end %>
