Add class for each filtered discussion's <a> tag on index discussions
Most organizations change the link colors through custom CSS.
Since each discussion on the index is wrapped in an <a> tag,
all text would change to the link color, which doesn't look very
good. Now that the tag can be easily identified, link colors can
be changed using a:not(.discussion-link).

--- a/app/views/layouts/_discussions_list.html.erb
+++ b/app/views/layouts/_discussions_list.html.erb
@@ -1,6 +1,6 @@
 <div class="discussions">
   <% @filtered_discussions.each do |discussion| %>
-    <%= link_to exercise_discussion_path(discussion.exercise.id, discussion) do %>
+    <%= link_to exercise_discussion_path(discussion.exercise.id, discussion), class: 'discussion-link' do %>
       <div class="discussion">
         <div class="discussion-row">
           <div class="d-flex justify-content-between">
