Add some margin between the discussion description and the publish button

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
@@ -315,6 +315,7 @@ $moderator-badge-color: #dd9900;
   border: 1px solid $discussion-message-border-color;
   border-radius: 3px;
   position: relative;
+  margin-bottom: 20px;
   .discussion-message-bubble-header {
     background-color: $mu-color-highlight-background;
     height: 40px;
