--- a/app/views/users/discussions.html.erb
+++ b/app/views/users/discussions.html.erb
@@ -22,6 +22,7 @@
                 <%= icon_for_read(discussion.read_by?(@user)) %>
               </td>
               <td><%= link_to discussion.item.name, item_discussion_path(discussion) %></td>
+              <td><%= discussion_user_name discussion.initiator %></td>
               <td><%= time_ago_in_words discussion.last_message_date %></td>
             </tr>
           <% end %>
