Move discussion status icon to the right

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_discussion.scss
@@ -88,7 +88,7 @@ $moderator-badge-color: #dd9900;
 }
 
 .discussion-status-icon {
-  padding-right: 5px;
+  padding-left: 2px;
 }
 
 .discussion-row {
