--- a/app/views/users/discussions.html.erb
+++ b/app/views/users/discussions.html.erb
@@ -28,14 +28,8 @@
               </thead>
               <%= user_discussions_table_header %>
             <% end %>
-            <tr>
-              <td class="text-center">
-                <%= icon_for_read(discussion.read_by?(@user)) %>
-              </td>
-              <td><%= link_to discussion.item.name, item_discussion_path(discussion) %></td>
-              <td><%= discussion_user_name discussion.initiator %></td>
-              <td><%= time_ago_in_words discussion.last_message_date %></td>
-            </tr>
+
+            <%= user_discussions_table_item(discussion, @user) %>
           <% end %>
         </table>
       </div>
