Improve contrast and margin on responsible moderator badge

--- a/app/views/layouts/_discussions_list.html.erb
+++ b/app/views/layouts/_discussions_list.html.erb
@@ -11,7 +11,7 @@
               <span class="d-none d-lg-inline"><%= discussion.exercise.guide.name %> -</span>
               <span><%= discussion.exercise.name %></span>
               <% if discussion.current_responsible_visible_for?(current_user) %>
-                <span class="badge bg-light text-dark">
+                <span class="badge ms-1 bg-dark">
                   <%= responsible_moderator_text_for(discussion, current_user)%>
                 </span>
               <% end %>
