Add notifications view to profile

--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -11,6 +11,7 @@
         <%= activity_user_menu_link %>
         <%= certificates_user_menu_link %>
         <%= exam_authorizations_user_menu_link %>
+        <%= notifications_user_menu_link %>
       </div>
     </div>
     <div class="mu-user-menu-divider vertical d-none d-md-block"></div>
