--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_dropdown.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_dropdown.scss
@@ -1,3 +1,9 @@
 .fixed-icon {
   margin-right: 5px;
 }
+
+.mu-notification-preview {
+  max-width: 350px;
+  @extend .d-inline-block;
+  @extend .text-truncate;
+}
