--- a/app/views/notifications/_dropdown.html.erb
+++ b/app/views/notifications/_dropdown.html.erb
@@ -4,7 +4,7 @@
     <span class="badge badge-notifications"><%= notifications_count %></span>
   </div>
   <ul id="notificationsPanel" class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationsDropdown">
-    <% notifications.each do |it| %>
+    <% user_notifications.each do |it| %>
       <li>
         <%= notification_preview_for it.target %>
       </li>
