--- a/app/views/notifications/previews/_message.html.erb
+++ b/app/views/notifications/previews/_message.html.erb
@@ -1,1 +1,2 @@
+<% target = notification.target %>
 <%= menu_item :envelope, :new_message_received, url_for(target.exercise), { sender: target.sender } %>
