--- a/app/views/notifications/previews/_discussion.html.erb
+++ b/app/views/notifications/previews/_discussion.html.erb
@@ -1,2 +1,2 @@
 <% target = notification.target %>
-<%= menu_item :comments, :new_discussion_message, url_for([target.item, target]), { title: target.item.name.truncate_words(3) } %>
+<%= notification_preview_item :comments, :new_discussion_message, url_for([target.item, target]), { title: target.item.name.truncate_words(3) } %>
