--- a/app/views/notifications/previews/_exam_registration.html.erb
+++ b/app/views/notifications/previews/_exam_registration.html.erb
@@ -1,2 +1,2 @@
 <% target = notification.target %>
-<%= menu_item :book_open, :exam_registration_open, url_for(target), { description: target.description } %>
+<%= notification_preview_item :book_open, :exam_registration_open, url_for(target), { description: target.description } %>
