Extract stealth link class

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -309,6 +309,12 @@
       /*@editable*/font-weight:normal;
       /*@editable*/text-decoration:underline;
     }
+
+    .mu-stealth-link {
+      text-decoration: none !important;
+      color: unset !important;
+    }
+
     @media only screen and (min-width:768px){
       .templateContainer{
         width:600px !important;
