--- a/app/views/notifications/_exam_registration.html.erb
+++ b/app/views/notifications/_exam_registration.html.erb
@@ -1,2 +1,2 @@
 <% target = notification.target %>
-<%= link_to t(:exam_registration_open, description: target.description), exam_registration_url(notification.organization, target), style: 'text-decoration: none; color: unset;' %>
+<%= link_to t(:exam_registration_open, description: target.description), exam_registration_url(notification.organization, target), class: 'mu-stealth-link' %>
