Hide <ul> tags on collapsed FAQ groups on mobile view

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_faqs.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_faqs.scss
@@ -21,7 +21,7 @@
 
       @include media-breakpoint-down(md) {
         &:not(.active) {
-          h3, p {
+          h3, p, ul {
             display: none
           }
           h2 {
