--- a/app/views/layouts/exercise_inputs/read_only_editors/_code.html.erb
+++ b/app/views/layouts/exercise_inputs/read_only_editors/_code.html.erb
@@ -1,3 +1,3 @@
 <div>
-  <%= read_only_editor content, exercise.language.name %>
+  <%= read_only_editor content, exercise.language.highlight_mode %>
 </div>
