Fix mail button tooltip

--- a/app/views/user_mailer/_mail_template.erb
+++ b/app/views/user_mailer/_mail_template.erb
@@ -107,7 +107,7 @@
                           <tbody>
                           <tr>
                             <td align="center" valign="middle" class="muMailButtonContent" style="font-family: Helvetica; font-size: 18px; padding: 18px;">
-                              <a class="muMailButton " title=<%= button %> href=<%= url %> target="_blank" style="font-weight: bold;letter-spacing: -0.5px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;"><%= button %></a>
+                              <a class="muMailButton" title="<%= button %>" href="<%= url %>" target="_blank" style="font-weight: bold;letter-spacing: -0.5px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;"><%= button %></a>
                             </td>
                           </tr>
                           </tbody>
