--- a/app/views/notifications/previews/_exam_authorization_request_updated.html.erb
+++ b/app/views/notifications/previews/_exam_authorization_request_updated.html.erb
@@ -1,2 +1,2 @@
 <% target = notification.target %>
-<%= notification_preview_item :book_open, :exam_authorization_request_updated, exam_authorizations_user_path, { description: target.exam_registration.description } %>
+<%= notification_preview_item :book_open, :exam_authorization_request_updated, exam_authorizations_user_path(notification.organization), { description: target.exam_registration.description } %>
