Use save instead of submit in manage notifications form

--- a/app/views/users/manage_notifications.html.erb
+++ b/app/views/users/manage_notifications.html.erb
@@ -9,7 +9,7 @@
         <h1><%= t(:manage_notifications) %></h1>
         <div class="mu-profile-actions d-none d-md-block">
           <a class="btn btn-secondary" href="<%= notifications_user_path %>">Cancelar</a>
-          <button type="submit" class="btn btn-complementary"><%= t :submit %></button>
+          <button type="submit" class="btn btn-complementary"><%= t :save %></button>
         </div>
       </div>
 
