Add spell checker to new message editor on discussions
Also, now that markdown is explicitly set as the editor language,
the new discussion message text area now features live formatting.

--- a/app/views/discussions/_new_message.html.erb
+++ b/app/views/discussions/_new_message.html.erb
@@ -10,7 +10,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="discussion-new-message-content">
-              <%= f.editor :content, '', { id: 'discussion-new-message', class: 'form-control', placeholder: t(:message) } %>
+              <%= spell_checked_editor 'message[content]', { id: 'discussion-new-message', placeholder: t(:message) } %>
             </div>
             <div class="discussion-message-content d-none" id="discussion-new-message-preview"></div>
           </div>
