Add read only legend when user are in that access mode

--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_breadcrumb.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_breadcrumb.scss
@@ -38,3 +38,14 @@
     max-width: 70vw;
   }
 }
+
+.mu-read-only {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  background-color: $mu-color-complementary;
+  color: white;
+  text-align: center;
+  padding: 15px;
+}
