--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,11 @@
 <%= content_for :navbar do %>
+
+  <% if current_access_mode.read_only? %>
+    <div class="mu-read-only">
+      <small><%= t :organization_read_only_legend %></small>
+    </div>
+  <% end %>
+
   <%= hidden_field_tag("mu-current-exp", UserStats.exp_for(@current_user)) if in_gamified_context? %>
   <div class="<%= exercise_container_type %> px-0">
     <nav class="navbar navbar-light navbar-expand-lg mu-navbar">
