--- a/app/views/exam_authorization_requests/_pending.html.erb
+++ b/app/views/exam_authorization_requests/_pending.html.erb
@@ -1,4 +1,8 @@
-<%= t :exam_authorization_pending_explanation_html,
-      end_time: l(authorization_request.exam_registration.end_time, format: :long),
-      location: Organization.current.time_zone,
-      edit_path: url_for(authorization_request.exam_registration) %>
+<% if authorization_request.exam_registration.ended? %>
+  <%= t :exam_authorization_pending_confirmation_soon_html %>
+<% else %>
+  <%= t :exam_authorization_pending_explanation_html,
+        end_time: l(authorization_request.exam_registration.end_time, format: :long),
+        location: Organization.current.time_zone,
+        edit_path: url_for(authorization_request.exam_registration) %>
+<% end %>
