Move progress bar alongside chapter title on book view

--- a/app/views/book/show.html.erb
+++ b/app/views/book/show.html.erb
@@ -28,17 +28,19 @@
 
       <div class="chapter-container">
         <div class="chapter <%= enabled ? '' : 'mu-locked' %>">
-          <h3><%= it.number %>. <%= link_to_path_element it, mode: :plain %></h3>
-          <div class="d-flex align-items-center mb-2">
-            <div class="mu-progress-bar-outer flex-grow-1">
-              <div class="mu-progress-bar-inner" data-mu-progress-bar-id="<%= it.number %>"></div>
+          <div class="d-flex justify-content-between">
+            <h3><%= it.number %>. <%= link_to_path_element it, mode: :plain %></h3>
+            <div class="d-flex align-items-center w-25">
+              <div class="mu-progress-bar-outer flex-grow-1">
+                <div class="mu-progress-bar-inner" data-mu-progress-bar-id="<%= it.number %>"></div>
+              </div>
+              <div class="ms-2">
+                <strong><%= "#{it.topic.humanized_progress_for(current_user)}" %></strong>
+              </div>
             </div>
           </div>
           <div class="text-box" <%= 'aria-label=""' unless enabled %>>
             <%= it.description_teaser_html %>
-          </div>
-          <div class="ms-2">
-            <strong><%= "#{it.topic.humanized_progress_for(current_user)}" %></strong>
           </div>
         </div>
 
