--- a/app/assets/stylesheets/mumuki_laboratory/application/_locked.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/_locked.scss
@@ -5,8 +5,8 @@
 .chapter {
   position: relative;
 
-  margin: 35px 0;
   padding-bottom: 15px;
+  min-height: 200px;
 
   &.mu-locked {
     opacity: 20%;
