--- a/app/assets/stylesheets/mumuki_laboratory/application/modules/_notifications.scss
+++ b/app/assets/stylesheets/mumuki_laboratory/application/modules/_notifications.scss
@@ -29,7 +29,7 @@
     position: absolute;
     border: none;
     background: none;
-    top: 0;
+    top: 5px;
     right: 0;
     i {
       @extend .fa-angle-down;
@@ -49,3 +49,10 @@
   }
 }
 
+.mu-readable-item-icon {
+  width: 3.5em;
+  text-align: center;
+  a {
+    color: unset;
+  }
+}
