--- a/app/views/user_mailer/notifications/_custom_notification.html.erb
+++ b/app/views/user_mailer/notifications/_custom_notification.html.erb
@@ -3,10 +3,10 @@
   <%= render inline: target.custom_html %>
 <% else %>
   <%= render partial: 'user_mailer/mail_template', locals: {
-    title: t("mailer.title.custom"),
+    title: t("mailer.title.custom_notification"),
     subtitle: '',
     text: target.body_html.html_safe,
-    button: t("mailer.button.custom"),
+    button: t("mailer.button.custom_notification"),
     url: @organization.url_for('/user/notifications')
   } %>
 <% end %>
