--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: 'user_mailer/mail_template', locals: {
-  title: '¡Hola, Matías!<br>Te damos la bienvenida a Mumuki'.html_safe,
+  title: t('mailer.title.welcome', first_name: @user.first_name).html_safe,
   text: @organization.welcome_email_template.html_safe,
   url: @organization.url_for('/user'),
 } %>
