Move delete_account flow to its own user menu link

--- a/app/views/layouts/_user_menu.html.erb
+++ b/app/views/layouts/_user_menu.html.erb
@@ -12,6 +12,8 @@
         <%= activity_user_menu_link %>
         <%= certificates_user_menu_link %>
         <%= exam_authorizations_user_menu_link %>
+        <%= user_menu_divider %>
+        <%= delete_account_user_menu_link %>
       </div>
     </div>
     <div class="mu-user-menu-divider vertical d-none d-md-block"></div>
