Use support email instead of reminder sender email

--- a/app/views/users/_user_delete_confirmation.erb
+++ b/app/views/users/_user_delete_confirmation.erb
@@ -12,6 +12,6 @@
 
 <div class="row">
   <div class="col-md-12">
-    <%= t :delete_account_confirmation_email_explain_html, user_email: @user.email, support_email: Rails.configuration.reminder_sender_email %>
+    <%= t :delete_account_confirmation_email_explain_html, user_email: @user.email, support_email: Rails.configuration.support_email %>
   </div>
 </div>
